convert test to junit 5 test